[project]
name = "sales-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "hindsight-litellm>=0.5.4",
    "openai>=2.43.0",
    "openai-agents>=0.17.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "zep-cloud>=3.23.0",
]
